--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="google" content="notranslate"/>
-    <link rel="icon" type="image/svg+xml" href="/assets/vite.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <title>Vite + react</title>
+    <title>Fanult — share 18+ exclusive content and earn via
+        subscriptions. Creators build closer ties through special photos, videos, and posts, while fans enjoy direct
+        access. 💡 A secure, modern space for unique adult content and community growth.</title>
 </head>
 <body>
 <div id="root"></div>
